# lua-secureunionid

./: CMakeLists.txt  README.md  lua-secureunionid-1.0-1.rockspec  runtests.sh
lib/: secureunionid.lua
rockspec/: lua-secureunionid-1.0-1.rockspec  lua-secureunionid-2.1-1.rockspec
src/: utils.c  utils.h
src/crypto/: amcl.h  ecp2_BN254.c  fp12_BN254.c  rand.c
src/psi/: encryption.c
tests/: test.lua
